#11 Added detection overlay class view in the frame layout

--- a/frontend/app/src/main/res/layout/activity_main.xml
+++ b/frontend/app/src/main/res/layout/activity_main.xml
@@ -19,6 +19,11 @@
         android:layout_height="match_parent"
         />
 
+    <com.example.dashcamfrontend.DetectionOverlay
+        android:id="@+id/overlayView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
     </FrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
